* `estimateHaze()` now ensures correct histogram order, which could be off when raster had to read from disk (reported by Xavier Bailleau).   
* `readMeta()` now makes concise bandnames also for Landsat Collection MTL files.
* fix `radCor()` for Landsat 4 TM (reported by Thomas Day)

Deprecated:
* `spectralIndices()` index `LSWI` has been deprecated, as it is identical with the now available NDWI2.

RStoolbox 0.1.6
=====================================
Fixes:
* fix import issue: replace deprecated export from caret 

RStoolbox 0.1.5
=====================================
Changes:
* If the bandSet argument in `radCor()` is used to process only a subset of bands it will no longer return unprocessed bands along with processed bands. Instead only processed bands are returned.
* By default `superClass()` will now use dataType = 'INT2S' for classification maps to avoid issues with raster NA handling in INT1U
* Allow reading and importing from Landsat MSS MTL files with `readMeta()` and `stackMeta()` (@aszeitz, #7)

Fixes:
* fix readMeta time-stamp conversion now correctly set to GMT time (@mraraju, #12)
* radCor caused R to crash if bandSet was a single band 
* fix single RasterLayer capability for superClass
* spectralIndices now calculates *all* documented indices if specified to do so (@mej1d1, #6)
* unsuperClass predicted map now handles NAs properly
* pifMatch did not return adjusted image (@tmb3006, #13)

Deprecated:
* argument `norm` was dropped from rasterPCA, because it was effectively a duplicate of the standardized pca (spca) argument in the same function.

RStoolbox 0.1.4
=====================================
New:
* new function `validateMap()` for assessing map accuracy separately from model fitting, e.g. after majority or MMU filtering
* new function `getValidation()` to extract specific validation results of superClass objects (proposed by James Duffy)
* new spectral index NDVIc (proposed by Jeff Evans)