@@ -18,6 +18,7 @@ Fixes:
 * `estimateHaze()` now ensures correct histogram order, which could be off when raster had to read from disk (reported by Xavier Bailleau).   
 * `readMeta()` now makes concise bandnames also for Landsat Collection MTL files.
 * fix `radCor()` for Landsat 4 TM (reported by Thomas Day)
+* `classifyQA()` confidence layer for type='water' now correctly returns only confidence levels in [1,3] 
 
 Deprecated:
 * `spectralIndices()` index `LSWI` has been deprecated, as it is identical with the now available NDWI2.
